--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,6 @@
-*.docx filter=lfs diff=lfs merge=lfs -text
+/site export-ignore
+/.github export-ignore
+.gitattributes export-ignore
+.gitignore export-ignore
+LICENSE export-ignore
+README.md export-ignore
