--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "github-actions"
           git submodule update --remote site/data
+          git rm --cached site/data
           git add site/data/*
           git commit -m "Update submodule site/data" || echo "No changes in submodule to commit"
 
