--- a/.github/workflows/deploy_static.yml
+++ b/.github/workflows/deploy_static.yml
@@ -35,6 +35,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Cleanup
+        run: |
+          rm README.md
+          rm LICENSE
+          rm .gitmodules
+          rm .gitattributes
+          rm -rf site
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
