--- a/.github/workflows/build_push_codelabs_pr.yml
+++ b/.github/workflows/build_push_codelabs_pr.yml
@@ -27,6 +27,11 @@ jobs:
           git add site/data/*
           git commit -m "Update submodule site/data" || echo "No changes in submodule to commit"
 
+      - name: debug
+        run: |
+          pwd
+          ls -la
+          
       - name: Build Site
         uses: ./.github/workflows/build_site.yml@main
 
