--- a/.github/workflows/build_push_codelabs_pr.yml
+++ b/.github/workflows/build_push_codelabs_pr.yml
@@ -33,7 +33,7 @@ jobs:
           ls -la
           
       - name: Build Site
-        uses: ./.github/workflows/build_site
+        uses: ./.github/workflows/build_site.yml
 
       - name: Check for worktree changes
         id: git-build-changes
